src/objects/Send_Email_on_Account__c.object
<CustomObject>
    <description>This Object is created to store the emails sent on account</description>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Recepient__c</fullName>
        <label>Email Recepient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Send_Emails</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Email</label>
    <nameField>
        <displayFormat>Email-{0}</displayFormat>
        <label>Send Email  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>